--- a/eas.json
+++ b/eas.json
@@ -1,8 +1,15 @@
 {
-  "cli": {
-    "version": ">= 0.52.0"
-  },
   "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "android": {
+        "gradleCommand": ":app:assembleDebug"
+      },
+      "ios": {
+        "buildConfiguration": "Debug"
+      }
+    },
     "preview": {
       "android": {
         "buildType": "apk"
